@@ -198,7 +198,7 @@ oarc-spawn-ctrls-tab-title=Spawn Controls
 oarc-settings-tab-title=Settings
 oarc-mod-info-tab-title=Mod Info
 oarc-player-list-tab-title=Player List
-oarc-surface-config-tab-title=Surface Config
+oarc-surface-config-tab-title=Surface Settings
 oarc-item-shop-tab-title=[item=coin]Shop
 
 oarc-server-info-tab-welcome-msg-title=Welcome Message
@@ -233,9 +233,9 @@ oarc-player-list-tab-location-button-tooltip=Click to view map location.
 oarc-settings-tab-title-mod-settings=Mod Settings
 oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues!\nChanging settings will not modify existing spawns. BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
-oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game. Check the Surface Config tab for surface-specific settings.
+oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game. Check the Surface Settings tab for surface-specific settings.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
-oarc-settings-tab-title-surface=Surface Settings
+oarc-settings-tab-title-surface=Enable or Disable Surface Features
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
 oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. [color=red]This feature is currently a work in progress.[/color]
 oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
